--- a/public/profile.html
+++ b/public/profile.html
@@ -15,33 +15,53 @@
     <button onclick="logout()">Logout</button>
 
     <script>
-        // Load user data from localStorage
-        const user = JSON.parse(localStorage.getItem("user"));
-        if (!user) {
+        // Check if user is logged in
+        const token = localStorage.getItem("token");
+
+        if (!token) {
             window.location.href = "login.html"; // Redirect if not logged in
         } else {
-            document.getElementById("userName").textContent = user.name;
-            document.getElementById("userEmail").textContent = user.email;
+            // Fetch user data from the backend
+            fetch("https://new-login-839a689de041.herokuapp.com/profile", {
+                method: "GET",
+                headers: {
+                    "Authorization": `Bearer ${token}`,
+                    "Content-Type": "application/json"
+                }
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    document.getElementById("userName").textContent = data.user.name;
+                    document.getElementById("userEmail").textContent = data.user.email;
+                    localStorage.setItem("user", JSON.stringify(data.user)); // Update local storage
+                } else {
+                    alert("Session expired. Please log in again.");
+                    logout();
+                }
+            })
+            .catch(error => console.error("Error loading profile:", error));
         }
 
         function editProfile() {
+            const user = JSON.parse(localStorage.getItem("user"));
             const newName = prompt("Enter new name:", user.name);
             const newEmail = prompt("Enter new email:", user.email);
+
             if (newName && newEmail) {
                 fetch("https://new-login-839a689de041.herokuapp.com/update-profile", {
-                    method: "POST",
+                    method: "PUT",
                     headers: {
+                        "Authorization": `Bearer ${token}`,
                         "Content-Type": "application/json"
                     },
-                    body: JSON.stringify({ email: user.email, newName, newEmail })
+                    body: JSON.stringify({ newName, newEmail })
                 })
                 .then(response => response.json())
                 .then(data => {
                     alert(data.message);
                     if (data.success) {
-                        user.name = newName;
-                        user.email = newEmail;
-                        localStorage.setItem("user", JSON.stringify(user));
+                        localStorage.setItem("user", JSON.stringify({ name: newName, email: newEmail }));
                         window.location.reload();
                     }
                 });
@@ -54,9 +74,10 @@
                 fetch("https://new-login-839a689de041.herokuapp.com/reset-password", {
                     method: "POST",
                     headers: {
+                        "Authorization": `Bearer ${token}`,
                         "Content-Type": "application/json"
                     },
-                    body: JSON.stringify({ email: user.email, newPassword })
+                    body: JSON.stringify({ newPassword })
                 })
                 .then(response => response.json())
                 .then(data => alert(data.message));
@@ -64,6 +85,7 @@
         }
 
         function logout() {
+            localStorage.removeItem("token");
             localStorage.removeItem("user");
             window.location.href = "login.html";
         }
