--- a/public/profile.html
+++ b/public/profile.html
@@ -86,10 +86,14 @@
                     body: JSON.stringify({ newPassword })
                 })
                 .then(response => response.json())
-                .then(data => alert(data.message));
+                .then(data => alert(data.message))
+                .catch(error => {
+                    console.error("Error resetting password:", error);
+                    alert("Error resetting password. Please try again.");
+                });
             }
         }
-
+        
         function logout() {
             localStorage.removeItem("token");
             localStorage.removeItem("user");
