--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Register</h2>
+    <h2>Register test</h2>
     <form id="registerForm">
         <input type="text" id="name" placeholder="Name" required><br><br>
         <input type="email" id="email" placeholder="Email" required><br><br>
